--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,18 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SmtpSettings": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "Username": "seu-email@gmail.com",
+    "Password": "sua-senha-de-app",
+    "EnableSsl": true,
+    "From": "contato@severotech.com.br",
+    "To": "contato@severotech.com.br"
+  }
 }
